# github_blog

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  config.yaml  config.yaml.example  index.html  main.py  pyproject.toml  pyrightconfig.json  robots.txt  sitemap.xml  ty.toml
.github/: pull_request_template.md
.github/workflows/: gen_site.yml  sync.yml  trigger.yml
contents/: about.html  atom.xml  index.html
contents/blog/: 1-python.html  1.html  10-macapp.html  10.html  11-python.html  11.html  12-obsidian.html  12.html  13-dataanalysis.html  13.html  14-python-cs50p.html  14.html  15-vmware.html  15.html  16-vim.html  16.html  17-macapp.html  17.html  18-python.html  18.html  2-dataanalysis-office-excel.html  2.html  20-python-rss.html  20.html  21-python-blog.html  21.html  22.html  23-python.html  23.html  24-python-blog.html  24.html  25-python-dataanalysis.html  25.html  26-python-dataanalysis.html  26.html  27-python.html  27.html  28-vscode-copilot.html  28.html  29-summary.html  (+20 more)
contents/page/: 1.html  2.html  3.html  4.html
contents/tag/: DataAnalysis.html  RSS.html  RandomThoughts.html  SQL.html  VMware.html  VSCode.html  blog.html  copilot.html  cs50p.html  index.html  macapp.html  obsidian.html  office-excel.html  python.html  summary.html  travel.html  vibe-coding.html  vim.html
contents/tags/: index.html
docs/: migration.md
docs/superpowers/specs/: 2026-03-22-blog-optimization-design.md
scripts/: pre-commit-check.sh
src/github_blog/: cli.py  config.py
src/github_blog/services/: github_service.py  render_service.py
src/github_blog/utils/: slug.py
templates/BearMinimal/: about.html  base.html  home.html  index.html  post.html  tags.html
templates/BearMinimal/static/css/: style.css
templates/BearMinimal/static/js/: theme.js
templates/Escape1/: post.html
templates/Escape2/: 404.html  README.md  about.html  base.html  home.html  index.html  post.html  tag.html  tags.html
templates/Escape2.backup/: about.html  base.html  home.html  index.html  post.html  tag.html  tags.html
templates/Escape2.backup/static/css/: prism.css  style.css
templates/Escape2/static/css/: style.css
templates/Escape2/static/js/: theme.js
templates/PaperMint/: README.md  about.html  base.html  home.html  index.html  post.html  tag.html  tags.html
templates/PaperMint/static/css/: home.css  papermint.css
templates/PaperMint/static/js/: prism.js
templates/PaperMod/: base.html  home.html  index.html  post.html  tag.html  tags.html
templates/PaperMod/static/css/: papermod.css
templates/PaperMod/static/js/: papermod.js
templates/default_theme/static/css/: prism.css  style.css
templates/seo/: sitemap.xml.j2
tests/: test_cli.py  test_config.py  test_github_service.py  test_pagination.py  test_renderer.py  test_slug.py  test_template_integrity.py
