[project]
name = "github-blog"
version = "0.1.0"
description = "A robust GitHub Issue-based blog generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cachetools>=6.2.6",
    "feedgen>=1.0.0",
    "jinja2>=3.1.4",
    "lru-dict>=1.4.1",
    "marko>=2.1.2",
    "pygithub>=2.4.0",
    "pypinyin>=0.55.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.1.0",
    "tenacity>=8.2.0",
]

[project.scripts]
blog-gen = "github_blog.cli:run_cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ty>=0.0.25",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
    "ANN", # flake8-annotations
]
ignore = [
    "E501",   # 忽略行长限制
    "ANN101", # self 类型注解是冗余的
    "ANN102", # cls 类型注解是冗余的
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportAny = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportMissingParameterType = "warning"
reportUnusedCallResult = "none"
reportMissingTypeArgument = "warning"

